[Qt][WK2] ApplicationCache LayoutTests failed https://bugs.webkit.org/show_bug.cgi?id=69541

Reviewed by Chang Shu.

Source/WebKit2:

1. Moved applicationCacheDirectory to common code.
2. Added interface setApplicationCacheDirectory to allow UI client overriding.
3. Renamed all platform-dependent implementations of applicationCacheDirectory to platformDefaultApplicationCacheDirectory.
4. On Qt, set the platformDefaultApplicationCacheDirectory to the default data location.

* UIProcess/WebContext.cpp:
(WebKit::WebContext::applicationCacheDirectory):
* UIProcess/WebContext.h:
(WebKit::WebContext::setApplicationCacheDirectory):
* UIProcess/efl/WebContextEfl.cpp:
(WebKit::WebContext::platformDefaultApplicationCacheDirectory):
* UIProcess/gtk/WebContextGtk.cpp:
(WebKit::WebContext::platformDefaultApplicationCacheDirectory):
* UIProcess/mac/WebContextMac.mm:
(WebKit::WebContext::platformDefaultApplicationCacheDirectory):
* UIProcess/qt/WebContextQt.cpp:
(WebKit::WebContext::platformDefaultApplicationCacheDirectory):
* UIProcess/win/WebContextWin.cpp:
(WebKit::WebContext::platformDefaultApplicationCacheDirectory):

LayoutTests:

Unskip passed tests.

* platform/qt-wk2/Skipped:


Canonical link: https://commits.webkit.org/85695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96938 268f45cc-cd09-0410-ab3c-d52691b4dbfc