Source/WebKit2/UIProcess/WebContext.h
@@ -110,7 +110,9 @@ public:
     void setAdditionalPluginsDirectory(const String&);
 
     PluginInfoStore& pluginInfoStore() { return m_pluginInfoStore; }
-    String applicationCacheDirectory();
+    String applicationCacheDirectory() const;
+    String platformDefaultApplicationCacheDirectory() const;
+    void setApplicationCacheDirectory(const String& dir) { m_overrideApplicationCacheDirectory = dir; }
 
     void setAlwaysUsesComplexTextCodePath(bool);
     void setShouldUseFontSmoothing(bool);
@@ -279,6 +281,7 @@ private:
     String m_overrideDatabaseDirectory;
     String m_overrideIconDatabasePath;
     String m_overrideLocalStorageDirectory;
+    String m_overrideApplicationCacheDirectory;
 
     bool m_processTerminationEnabled;
     
