Source/WebKit2/UIProcess/efl/WebContextEfl.cpp
@@ -31,7 +31,7 @@
 
 namespace WebKit {
 
-String WebContext::applicationCacheDirectory()
+String WebContext::platformDefaultApplicationCacheDirectory() const
 {
     return WebCore::cacheStorage().cacheDirectory();
 }
